--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "cloudinary": "^2.5.1",
+    "firebase": "^11.0.1",
+    "next": "15.0.3",
+    "next-cloudinary": "^6.16.0",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "eslint": "^8",
