--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "firebase": "^11.0.1",
     "next": "15.0.3",
     "next-cloudinary": "^6.16.0",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "18.2.0",
     "react-data-table-component": "^7.6.2",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "18.2.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
