--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cloudinary": "^2.5.1",
     "firebase": "^11.0.1",
     "next": "15.0.3",
